<resources>
    <string name="app_name">SIKAT</string>
    <string name="title_home">Beranda</string>
    <string name="title_service">Layanan</string>
    <string name="title_profile">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Sandi</string>
    <string name="name">Name</string>
    <string name="daftar"><u>Daftar</u></string>
    <string name="masuk"><u>Masuk</u></string>
    <string name="daftar_title">Daftar</string>
    <string name="masuk_title">Masuk</string>
    <string name="informasi">Informasi</string>
    <string name="tarif">Tarif</string>
    <string name="trayek">Trayek</string>
    <string name="kendaraan">Kendaraan</string>
    <string name="cari_layanan">Cari layanan</string>
    <string name="nama_pengemudi">Pengemudi: %1$s</string>
    <string name="plat_nomor">Plat nomor: %1$s</string>
    <string name="rute">Rute: %1$s</string>
    <string name="fare">Tarif: Rp5000</string>
    <string name="back_button">Back Button</string>
</resources>