<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/img_angkot"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:background="@drawable/rounded"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/angkot1"
        tools:targetApi="s" />

    <TextView
        android:id="@+id/tv_plat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/plat_nomor"
        app:layout_constraintStart_toEndOf="@id/img_angkot"
        app:layout_constraintTop_toTopOf="@+id/img_angkot" />

    <TextView
        android:id="@+id/tv_name_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/nama_pengemudi"
        app:layout_constraintStart_toStartOf="@+id/tv_plat"
        app:layout_constraintTop_toBottomOf="@+id/tv_plat" />

    <TextView
        android:id="@+id/tv_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/rute"
        app:layout_constraintStart_toStartOf="@+id/tv_name_driver"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_driver" />

<TextView
        android:id="@+id/tv_fare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/fare"
        app:layout_constraintStart_toStartOf="@+id/tv_route"
        app:layout_constraintTop_toBottomOf="@+id/tv_route" />

</androidx.constraintlayout.widget.ConstraintLayout>